# termdeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  com.termdeck.plist  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  installation.md  troubleshooting.md
packaging/homebrew/: README.md  generate_formula.py
packaging/launchd/: README.md
termdeck/: __main__.py  agent_session_tracker.py  claude_activity_watcher.py  cli.py  config.py  draft_tracker.py  environment_check.py  file_service.py  models.py  platform_paths.py  proc_tree.py  project_registry.py  pty_process.py  search_service.py  server.py  service_installer.py  session_manager.py  session_store.py  settings_store.py  stats_service.py  transcript_service.py  util.py
termdeck/static/: app.js  index.html  style.css
