[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termdeck"
dynamic = ["version"]
description = "Browser terminal deck: persistent named terminals, a Monaco file viewer, and automatic claude/codex session resume across restarts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Danial Farid" }]
keywords = ["terminal", "tmux", "xterm", "claude", "codex", "ai-agents", "web-terminal", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12",
    "setproctitle>=1.3",
    "python-multipart>=0.0.9",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/danialfarid/termdeck"
Repository = "https://github.com/danialfarid/termdeck"
Issues = "https://github.com/danialfarid/termdeck/issues"
Changelog = "https://github.com/danialfarid/termdeck/blob/main/CHANGELOG.md"

[project.scripts]
termdeck = "termdeck.cli:TermdeckCli.main"

[tool.hatch.version]
path = "termdeck/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["termdeck"]

[tool.hatch.build.targets.sdist]
include = ["termdeck", "README.md", "LICENSE", "NOTICE", "CHANGELOG.md", "docs"]
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]
